@@ -2,6 +2,7 @@
 ----------------
 * Fix unicode NameError on Python 3. (Appeared only on OSes with unicode
   paths.)(Thanks to Hanlle Nicolas, Aaron Lelevier, Dmitry Dygalo.)
+* Fix test on MacOSX: temp dir contains symlink. (wrightmx)
 
 1.0 (2013-04-05)
 ------------------
